--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "license": "Apache-2.0",
   "main": "dist/umd/oidc-client-ts.js",
   "types": "dist/types/oidc-client-ts.d.ts",
+  "module": "dist/esm/oidc-client-ts.js",
   "exports": {
     ".": {
       "types": "./dist/types/oidc-client-ts.d.ts",
@@ -39,13 +40,12 @@
     "prepare": "husky install"
   },
   "dependencies": {
-    "crypto-js": "^4.1.1",
+    "crypto-es": "^1.2.7",
     "jwt-decode": "^3.1.2"
   },
   "devDependencies": {
     "@microsoft/api-extractor": "^7.18.10",
     "@testing-library/jest-dom": "^5.16.5",
-    "@types/crypto-js": "^4.0.2",
     "@types/jest": "^29.2.3",
     "@typescript-eslint/eslint-plugin": "^5.8.0",
     "@typescript-eslint/parser": "^5.8.0",
